configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: portfolio
  namespace: portfolio

spec:
  replicas: 1

  selector:
    matchLabels:
      app: portfolio

  template:
    metadata:
      labels:
        app: portfolio

    spec:
      containers:
        - name: portfolio

          image: docker.io/library/portfolio:v1

          imagePullPolicy: Never

          ports:
            - containerPort: 3000
